force-app/main/default/objects/Benefit.object
<CustomObject>
    <fields>
        <fullName>Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Benefits</relationshipLabel>
        <relationshipName>Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Benefits</relationshipLabel>
        <relationshipName>Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Schedules__c</fullName>
        <label>Total Schedules</label>
        <summaryForeignKey>BenefitSchedule.BenefitId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Type</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Benefits</relationshipLabel>
        <relationshipName>Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>Benefit_Scheduler</fullName>
        <active>true</active>
        <description>Used with Lightning Scheduler Benefit Accelerator to allow for more advanced scheduling</description>
        <label>Benefit Scheduler</label>
    </recordTypes>
</CustomObject>